@@ -1,3 +1,6 @@
+  - added CloudFiles target to enable backups to Rackspace/Mosso's online
+    data storage service. (William Wolf)
+
 1.08 (2009-04-26)
 
   - make brackup-target --verbose prune and gc more verbose (gavincarr)
